adjust tag link page to the right

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>🌸My CSTU Story🌸</h1>
     <a id="a1" href="myfuture.html"><h2>MY FUTURE🌸</h2></a>
-    <a id="a2" href="myjourney.html"><h2>MY JOURNEY🌸</h2></a>
+    <a id="a2-hp" href="myjourney.html"><h2>MY JOURNEY🌸</h2></a>
 
     <video src="resources/myvdo.mp4" controls></video>
 
