--- a/myfuture.html
+++ b/myfuture.html
@@ -9,7 +9,7 @@
 <body>
     <h1>🌸My Future🌸</h1>
     <a id="a1" href="index.html"> <h2>HOME PAGE🌸</h2></a>
-    <a id="a2" href="myjourney.html"><h2>MY JOURNEY🌸</h2></a>
+    <a id="a2-jn" href="myjourney.html"><h2>MY JOURNEY🌸</h2></a>
     <div class="grid-2">
         <div class="grid-future">
             <img src="resources/acc.png">
